--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,21 @@
 [tool.poetry]
-    name        = "vscode-task-runner"
-    version     = "0.1.2"
+    name = "vscode-task-runner"
+    version = "0.1.3"
     description = "Task runner for VSCode tasks.json"
-    authors     = ["Nathan Vaughn <nvaughn51@gmail.com>"]
-    readme      = "README.md"
-    packages    = [{ include = "vtr" }]
+    license = "MIT"
+    readme = "README.md"
+    homepage = "https://github.com/NathanVaughn/vscode-task-runner"
+    repository = "https://github.com/NathanVaughn/vscode-task-runner.git"
+    authors = ["Nathan Vaughn <nvaughn51@gmail.com>"]
+    classifiers = [
+        "Intended Audience :: Developers",
+        "Topic :: Software Development :: Libraries :: Python Modules",
+        "Topic :: Software Development :: Build Tools",
+    ]
+    packages = [{ include = "vtr" }]
+
+[tool.poetry.urls]
+    Issues = "https://github.com/NathanVaughn/vscode-task-runner/issues"
 
 [tool.poetry.dependencies]
     python      = ">=3.10,<4.0"
