--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
     name = "vscode-task-runner"
-    version = "0.1.3"
-    description = "Task runner for VSCode tasks.json"
+    version = "0.1.4"
+    description = "Task runner for VS Code tasks.json"
     license = "MIT"
     readme = "README.md"
     homepage = "https://github.com/NathanVaughn/vscode-task-runner"
@@ -30,7 +30,8 @@
     pytest-cov  = "^4.1.0"
 
 [tool.poetry.scripts]
-    vtr = "vtr.console:run"
+    vtr                = "vtr.console:run"
+    vscode-task-runner = "vtr.console:run"
 
 [tool.pyright]
     typeCheckingMode = "basic"
