--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -21,9 +21,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Install Poetry
-        run: |
-          python -m pip install pip wheel pipx --upgrade
-          pipx install poetry
+        run: pipx install poetry
 
       - name: Get version
         run: echo "PROJECT_VERSION=$(poetry version --short)" >> $GITHUB_ENV
