--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,9 +20,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Install Poetry
-        run: |
-          python -m pip install pip wheel pipx --upgrade
-          pipx install poetry
+        run: pipx install poetry
 
       - name: Setup Python ${{ matrix.python_version }}
         uses: actions/setup-python@v4
