Use dependabot groups [ci skip]

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@
     typeCheckingMode = "basic"
     venvPath         = "."
     venv             = ".venv"
+    reportMissingParameterType  = true
 
 [tool.ruff]
     ignore = ["E501"]
