--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python_version: ["3.11", "3.10", "3.9", "3.8"]
+        python_version: ["3.12", "3.11", "3.10", "3.9", "3.8"]
 
     steps:
       - name: Checkout Code
