--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,11 +8,11 @@ repos:
     -   id: check-merge-conflict
     -   id: mixed-line-ending
     repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.4.0
+    rev: v4.5.0
 -   hooks:
     -   id: poetry-check
     -   args:
-        - --no-update
+        -   --no-update
         id: poetry-lock
     repo: https://github.com/python-poetry/poetry
     rev: 1.6.1
@@ -22,18 +22,15 @@ repos:
     rev: v0.3.1
 -   hooks:
     -   args:
-        - --fix
+        -   --fix
         id: ruff
+    -   id: ruff-format
     repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.0.291
--   hooks:
-    -   id: black
-    repo: https://github.com/psf/black
-    rev: 23.9.1
+    rev: v0.1.2
 -   hooks:
     -   id: pyright
     repo: https://github.com/RobertCraigie/pyright-python
-    rev: v1.1.329
+    rev: v1.1.332
 -   hooks:
     -   id: markdownlint
     repo: https://github.com/igorshubovych/markdownlint-cli
