--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@
     shellingham = "^1.5.4"
     pyjson5     = "^1.6.2"
     dacite      = "^1.8.1"
+questionary = "^2.0.1"
 
 [tool.poetry.group.dev.dependencies]
     pre-commit  = "^3.2.0"
