--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,10 @@
 repos:
+-   repo: https://gitlab.com/bmares/check-json5
+    rev: v1.0.0
+    hooks:
+    -   id: check-json5
+
 -   hooks:
-    -   id: check-json
     -   id: check-toml
     -   id: check-yaml
     -   id: check-case-conflict
