--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v4
 
-      - name: Install Poetry/vscode-task-runner
+      - name: Install Poetry
         uses: threeal/pipx-install-action@v1.0.0
         with:
           packages: |
@@ -44,7 +44,7 @@ jobs:
         run: poetry install --sync
 
       - name: Run Pre-Commit Checks
-        run: python -m vtr pre-commit --color=always --show-diff-on-failure
+        run: poetry run python -m vtr pre-commit --color=always --show-diff-on-failure
 
       - name: Run Tests
-        run: python -m vtr tests
+        run: poetry run python -m vtr tests
