--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@
     pyjson5     = "^1.6.2"
     dacite      = "^1.8.1"
     questionary = "^2.0.1"
+    colorama    = "^0.4.6"
 
 [tool.poetry.group.dev.dependencies]
     pre-commit  = "^3.2.0"
