--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,37 +1,34 @@
-[tool.poetry]
+[project]
     name = "vscode-task-runner"
-    version = "1.3.0"
+    version = "1.3.1"
     description = "Task runner for VS Code tasks.json"
-    license = "MIT"
+    license = { text = "MIT" }
     readme = "README.md"
-    homepage = "https://github.com/NathanVaughn/vscode-task-runner"
-    repository = "https://github.com/NathanVaughn/vscode-task-runner.git"
-    authors = ["Nathan Vaughn <nvaughn51@gmail.com>"]
-    classifiers = [
-        "Intended Audience :: Developers",
-        "Topic :: Software Development :: Libraries :: Python Modules",
-        "Topic :: Software Development :: Build Tools",
+    authors = [{ name = "Nathan Vaughn", email = "nath@nvaughn.email" }]
+    requires-python = ">=3.9"
+    dependencies = [
+        "shellingham==1.5.4",
+        "pyjson5==1.6.6",
+        "dacite==1.8.1",
+        "questionary==2.0.1",
+        "colorama==0.4.6",
     ]
-    packages = [{ include = "vtr" }]
 
-[tool.poetry.urls]
-    Issues = "https://github.com/NathanVaughn/vscode-task-runner/issues"
+[project.urls]
+    Homepage   = "https://github.com/NathanVaughn/vscode-task-runner"
+    Repository = "https://github.com/NathanVaughn/vscode-task-runner.git"
+    Issues     = "https://github.com/NathanVaughn/vscode-task-runner/issues"
 
-[tool.poetry.dependencies]
-    python      = ">=3.8,<4.0"
-    shellingham = "^1.5.4"
-    pyjson5     = "^1.6.2"
-    dacite      = "^1.8.1"
-    questionary = "^2.0.1"
-    colorama    = "^0.4.6"
+[tool.uv]
+    dev-dependencies = [
+        "pre-commit>=3.2.0",
+        "pytest>=7.3.1",
+        "pytest-mock>=3.10.0",
+        "pytest-cov>=4.1,<6.0",
+        "pre-commit-uv>=3.8.0",
+]
 
-[tool.poetry.group.dev.dependencies]
-    pre-commit  = "^3.2.0"
-    pytest      = ">=7.3.1,<9.0.0"
-    pytest-mock = "^3.10.0"
-    pytest-cov  = ">=4.1,<6.0"
-
-[tool.poetry.scripts]
+[project.scripts]
     vtr                = "vtr.console:run"
     vscode-task-runner = "vtr.console:run"
 
@@ -42,8 +39,8 @@
     reportMissingParameterType = true
 
 [tool.ruff]
-    target-version = "py38"
+    target-version = "py39"
 
 [build-system]
-    requires      = ["poetry-core"]
-    build-backend = "poetry.core.masonry.api"
+    requires      = ["hatchling"]
+    build-backend = "hatchling.build"
