--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,11 +7,11 @@
     authors = [{ name = "Nathan Vaughn", email = "nath@nvaughn.email" }]
     requires-python = ">=3.9"
     dependencies = [
-        "shellingham == 1.5.4",
-        "pyjson5 == 1.6.6",
-        "dacite == 1.8.1",
-        "questionary == 2.0.1",
-        "colorama == 0.4.6",
+        "shellingham==1.5.4",
+        "pyjson5==1.6.6",
+        "dacite==1.8.1",
+        "questionary==2.0.1",
+        "colorama==0.4.6",
     ]
 
 [project.urls]
@@ -25,7 +25,7 @@
         "pre-commit-uv>=3.8.0",
         "pytest>=7.3.1",
         "pytest-mock>=3.10.0",
-        "pytest-cov>=4.1,<6.0",
+        "pytest-cov>=4.1",
     ]
 
 [project.scripts]
