--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
     name = "vscode-task-runner"
-    version = "1.3.1"
+    version = "1.3.2"
     description = "Task runner for VS Code tasks.json"
     license = { text = "MIT" }
     readme = "README.md"
@@ -9,6 +9,11 @@
         "Intended Audience :: Developers",
         "Topic :: Software Development :: Libraries :: Python Modules",
         "Topic :: Software Development :: Build Tools",
+        "License :: OSI Approved :: MIT License",
+        "Programming Language :: Python :: 3.9",
+        "Programming Language :: Python :: 3.10",
+        "Programming Language :: Python :: 3.11",
+        "Programming Language :: Python :: 3.12",
     ]
     requires-python = ">=3.9"
     dependencies = [
