Fix coverage directory

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -24,7 +24,7 @@
         },
         {
             "label": "tests",
-            "command": "uv run pytest --cov --cov-report html",
+            "command": "uv run pytest --cov=vscode_task_runner/ --cov-report html",
             "type": "shell",
             "dependsOn": ["install-pkgs"]
         },
