--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,7 +18,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python_version: ["3.12", "3.11", "3.10", "3.9"]
+        python_version: ["3.13", "3.12", "3.11", "3.10", "3.9"]
 
     steps:
       - name: Checkout Code
