--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -21,6 +21,6 @@
         }
     },
     "mounts": [
-        "source=devcontainer-profile-${containerWorkspaceFolderBasename},target=/home/code/,type=volume"
+        "source=devcontainer-profile-${containerWorkspaceFolderBasename},target=/home/dev/,type=volume"
     ]
 }
