--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
     name = "vscode-task-runner"
-    version = "1.3.5"
+    version = "1.3.6"
     description = "Task runner for VS Code tasks.json"
     readme = "README.md"
     authors = [{ name = "Nathan Vaughn", email = "nath@nvaughn.email" }]
@@ -46,6 +46,9 @@
     venvPath                   = "."
     venv                       = ".venv"
     reportMissingParameterType = true
+
+[tool.ruff.lint.flake8-tidy-imports]
+    ban-relative-imports = "all"
 
 [build-system]
     requires      = ["hatchling"]
