--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,8 @@
         "dacite>=1.8.1",
         "questionary>=2.0.1",
         "colorama>=0.4.6",
-    ]
+        "pydantic>=2.11.3",
+]
 
 [dependency-groups]
     dev = [
