--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -13,26 +13,52 @@
         },
         {
             "label": "install",
-            "dependsOn": ["install-pkgs", "install-pre-commit"],
+            "dependsOn": [
+                "install-pkgs",
+                "install-pre-commit"
+            ],
             "dependsOrder": "sequence"
         },
         {
             "label": "pre-commit",
             "command": "uv run pre-commit run --all-files",
             "type": "shell",
-            "dependsOn": ["install-pkgs"]
+            "dependsOn": [
+                "install-pkgs"
+            ],
+            "problemMatcher": []
         },
         {
             "label": "tests",
             "command": "uv run pytest --cov=vscode_task_runner/ --cov-report html",
             "type": "shell",
-            "dependsOn": ["install-pkgs"]
+            "dependsOn": [
+                "install-pkgs"
+            ],
+            "problemMatcher": []
         },
         {
             "label": "build",
             "command": "uv build",
             "type": "shell",
-            "dependsOn": ["install-pkgs"]
+            "dependsOn": [
+                "install-pkgs"
+            ]
+        },
+        {
+            "label": "complex-task",
+            "type": "shell",
+            "command": "${command:python.interpreterPath} -m vscode_task_runner \"ComplexTask - Main\"",
+            "options": {
+                "cwd": "${workspaceFolder}/tests/test_tasks/test_complex_execution",
+                "env": {
+                    "PYTHONPATH": "${workspaceFolder}${pathSeparator}${env:PYTHONPATH}"
+                }
+            },
+            "dependsOn": [
+                "install-pkgs"
+            ],
+            "problemMatcher": []
         }
     ]
 }
