--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -19,14 +19,12 @@
         {
             "label": "pre-commit",
             "command": "uv run pre-commit run --all-files",
-            "type": "shell",
-            "dependsOn": ["install-pkgs"]
+            "type": "shell"
         },
         {
             "label": "tests",
             "command": "uv run pytest --cov=vscode_task_runner/ --cov-report html",
-            "type": "shell",
-            "dependsOn": ["install-pkgs"]
+            "type": "shell"
         },
         {
             "label": "tests-report",
@@ -36,8 +34,7 @@
         {
             "label": "build",
             "command": "uv build",
-            "type": "shell",
-            "dependsOn": ["install-pkgs"]
+            "type": "shell"
         }
     ]
 }
