--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,7 @@
         "questionary>=2.0.1",
         "colorama>=0.4.6",
         "pydantic>=2.11.3",
-]
+    ]
 
 [dependency-groups]
     dev = [
@@ -42,7 +42,7 @@
     vscode-task-runner = "vscode_task_runner.console:run"
 
 [tool.pyright]
-    pythonVersion              = "3.9" # set to minimum supported version
+    pythonVersion              = "3.9"   # set to minimum supported version
     typeCheckingMode           = "basic"
     venvPath                   = "."
     venv                       = ".venv"
@@ -51,6 +51,9 @@
 [tool.ruff.lint.flake8-tidy-imports]
     ban-relative-imports = "all"
 
+[tool.uv.build-backend]
+    module-root = ""
+
 [build-system]
-    requires      = ["hatchling"]
-    build-backend = "hatchling.build"
+    requires      = ["uv_build>=0.7.15"]
+    build-backend = "uv_build"
