devcontainer: sync container user UID/GID with host to fix write permissions

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,11 @@
 {
     "image": "ghcr.io/nathanvaughn/devcontainers/python:latest",
+    "features": {
+        "ghcr.io/devcontainers/features/common-utils:2": {
+            "username": "automatic",
+            "updateRemoteUserUID": true
+        }
+    },
     "customizations": {
         "vscode": {
             "extensions": [
