--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
     name = "vscode-task-runner"
-    version = "2.1.0"
+    version = "2.2.0"
     description = "Task runner for VS Code tasks.json"
     readme = "README.md"
     authors = [{ name = "Nathan Vaughn", email = "nath@nvaughn.email" }]
@@ -27,6 +27,7 @@
 [dependency-groups]
     dev = [
         "pre-commit>=3.2.0",
+        "pre-commit-uv>=4.1.5",
         "pytest>=7.3.1",
         "pytest-mock>=3.10.0",
         "pytest-cov>=4.1",
