--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,6 +52,9 @@
 [tool.ruff.lint.flake8-tidy-imports]
     ban-relative-imports = "all"
 
+[tool.uv]
+    required-version = ">=0.8.0"
+
 [tool.uv.build-backend]
     module-root = ""
 
